Day3/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-image-clusterip
spec:
  selector:
    app: my-image
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
