Day3/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-image-nodeport
spec:
  selector:
    app: pmy-image
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
     
  type: NodePort
