Day3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-image-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-image.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-image-clusterip
                port:
                  number: 80
